--- a/analysis/code_figure_2a.Rmd
+++ b/analysis/code_figure_2a.Rmd
@@ -6,6 +6,16 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
+#allow fread function and data.table structure
+library(data.table)
+#allow heatmap functions
+library(NMF)
+
+#Reference data/output directories
+data_dir <- "../data"
+output_dir <- "../output"
+
+
 ```
 
 ## Figure 2a replication
@@ -13,23 +23,27 @@ Data used: "normalized_data_oxidative_stress_Candida_glabrata.txt.csv"
 
 The given tab-delimited file was imported into excel then exported as a csv.
 
-```{r import matrix, echo=FALSE}
+```{r read data, echo=FALSE}
 
-setwd("C:/Users/Zoheb/Desktop/He Lab-R Files/C031-Cg-OSR-regulon/data")
-
-#allow fread function and data.table structure
-library(data.table)
-#allow heatmap functions
-library(NMF)
+#Get working directory for fread functionality
+setwd(data_dir)
 
 #read in data from csv
 fread("normalized_data_oxidative_stress_Candida_glabrata.txt.csv") -> unfiltered_data
 
+```
+
+```{r format csv, echo=FALSE}
+
 #Remove header columns and rows to get raw data
 unfiltered_data[-1,-1] -> filtered_data
 
-#how to remove nulls from a single column
+#Remove SD and CV columns since not needed for heatmap
+filtered_data <- filtered_data[,-c(2,3,5,6,8,9,11,12,14,15,17,18)]
+
+#how to remove nulls from a single column and only select for induction above 3x
 filtered_data <- filtered_data[filtered_data$`htu_yap04mM_2_1.gpr;htu_yap04mM_add1.gpr` != 'null',]
+filtered_data <- filtered_data[filtered_data$`htu_yap04mM_2_1.gpr;htu_yap04mM_add1.gpr` >=3.0,]
 
 #working on removing nulls from all columns
 #for (col in names(filtered_data)){
@@ -41,13 +55,22 @@ filtered_data <- filtered_data[filtered_data$`htu_yap04mM_2_1.gpr;htu_yap04mM_ad
 #converts values checked by str() from factors to numerics for heatmap
 filtered_data$`htu_yap04mM_2_1.gpr;htu_yap04mM_add1.gpr`<-as.numeric(as.character(filtered_data$`htu_yap04mM_2_1.gpr;htu_yap04mM_add1.gpr`))
 
+
+#print(filtered_data)
+
+```
+
+## Heatmap of Figure 2a
+
+``` {r generate heatmaps and print, echo=FALSE}
+#Messing around with code; not final
+options(warn = -1)
+
+
+
 #Generate basic Heatmap (Note havent used aheatmap() function yet)
 x<-heatmap(matrix(filtered_data$`htu_yap04mM_2_1.gpr;htu_yap04mM_add1.gpr`, ncol = 2), trace="n", Colv = FALSE, Rowv=FALSE,
       cellnote = matrix(1, ncol = 2), notecol = 1, scale = "none",
       dendrogram = "none", labCol = "", labRow = "", cexRow = 0.75)
 
-
-print(x)
-
 ```
-
