updated figure with legend and clustered data, also began write-up

--- a/analysis/OSR_targets.Rmd
+++ b/analysis/OSR_targets.Rmd
@@ -63,7 +63,7 @@ filtered_data[, names(filtered_data) := lapply(.SD, as.numeric)]
 ```
 
 ##Generate Histograms
-
+TO DO: Single and double mutant analysis of gene expression and make ?venn-diagram?
 
 ```{r generate histograms, echo=FALSE}
 
