--- a/analysis/code_figure_2b.Rmd
+++ b/analysis/code_figure_2b.Rmd
@@ -38,7 +38,7 @@ The data was imported from the given tab-delmited file provided in the paper and
 | Column | Sample 1 | Sample 2 |
 | --------- | ----------- | ----------- |
 | 1  | WT Menadione stress | WT unstressed |
-| 2  | yap1skn7$\Delta$ Menadione stress | yap1skn7$\Delta$ unstressed |
+| 2  | yap1$\Delta$skn7$\Delta$ Menadione stress | yap1$\Delta$skn7$\Delta$ unstressed |
 
 ```{r read data, echo=FALSE}
 
@@ -75,7 +75,7 @@ names(filtered_data) <- c("Genes", "1", "1 CV", "2", "2 CV")
 
 #Save current variable for further analysis
 filtered_data_mena <- filtered_data
-save("filtered_data_mena", file = "2b.RData")
+save(filtered_data_mena, file = "filtered_data_mena.RData")
 
 # Only keep rows where atleast one column has >3x induction/repression, 1.59 is used here since data was log-base 2 transformed, also account for CV<1 to remove highly variant genes
 filtered_data <- filtered_data[((abs(filtered_data$`1`) > 1.59) & filtered_data$`1 CV`<1) | ((abs(filtered_data$`2`) > 1.59) & filtered_data$`2 CV`<1),]
@@ -88,9 +88,14 @@ filtered_data <- filtered_data[complete.cases(filtered_data), ]
 
 #Save the list of names for later use in labeling
 genenames <- filtered_data$`Genes`
+genenames_mena <- genenames
 
 #convert to matrix for easy use of heatmap
 filtered_data <- data.matrix(filtered_data)
+
+filtered_data_mena_final <- filtered_data
+save(filtered_data_mena_final, file = "filtered_data_mena_final.RData")
+save(genenames_mena, file = "genenames_mena.RData")
 
 #Testing
 #print(names(filtered_data))
