--- a/analysis/code_figure_2c.Rmd
+++ b/analysis/code_figure_2c.Rmd
@@ -36,7 +36,7 @@ load(file = "genenames_mena.RData")
 
 ##Generate initial venn diagram
 
-There were 118 genes observed under the wt 0.4mM H~2~O~2~ condition with a filter applied of >2x induction. Under the wt 0.1mM Menadione condition, there were 136 genes found. The observations took place after all rows with NA values were ommitted. There was an overlap of 28 genes.
+There were 235 genes observed under the wt 0.4mM H~2~O~2~ condition with a filter applied of >2x induction. Under the wt 0.1mM Menadione condition, there were 315 genes found. The observations took place after all rows with NA values were ommitted. There was an overlap of 28 genes.
 
 ```{r compare, echo=FALSE}
 print(nrow(filtered_data))
@@ -51,13 +51,32 @@ filtered_data_mena <- filtered_data_mena[(((filtered_data_mena$`1`) >1) & filter
 overlap_data <- inner_join(filtered_data, filtered_data_mena, by = "Genes")
 
 #draw initial venn diagram
-draw.pairwise.venn(area1 = nrow(filtered_data), area2 = nrow(filtered_data_mena), cross.area = nrow(overlap_data), category = c("0.4mM H2O2 wt", "0.1mM Menadione wt"), fill = "yellow")
+draw.pairwise.venn(area1 = nrow(filtered_data), area2 = nrow(filtered_data_mena), cross.area = nrow(overlap_data), category = c("0.4mM H2O2 wt", "0.1mM Menadione wt"), fill = c("yellow","yellow"), cat.pos = c(180,180), cex = c(2,2,2), cat.cex = c(1.5,1.5), alpha = c(.75,.75))
+
 
 #Testing
-print(filtered_data_mena)
+print(nrow(overlap_data))
 print(nrow(filtered_data))
 print(nrow(filtered_data_mena))
-print(nrow(overlap_data))
+print((overlap_data))
 
+
+```
+
+```{r compare2, echo=FALSE}
+
+#Within Overlap Data, select yap1 and skn7 dependent genes -- Note this was my interpretation of the papers figure 2c
+
+#First for H2O2 - See where wt was upregulated vs yap1 or skn7 deletion
+overlap_data_h2o2 <- overlap_data[(((overlap_data$`1.x`) >(overlap_data$`2.x`)) | ((overlap_data$`1.x`) >(overlap_data$`3.x`))),]
+
+#Next for mena - see where wt was upregulated vs double deletion
+overlap_data_mena <- overlap_data[((overlap_data$`1.y`) >(overlap_data$`2.y`)),]
+
+#check for overlap between sets
+new_overlap_data <- inner_join(overlap_data_h2o2, overlap_data_mena, by = "Genes")
+
+#draw initial venn diagram
+draw.pairwise.venn(area1 = nrow(overlap_data_h2o2), area2 = nrow(overlap_data_mena), cross.area = nrow(new_overlap_data), category = c("0.4mM H2O2 yap1 or skn7", "0.1mM Menadione yap1skn7"), fill = c("yellow","yellow"), cat.pos = c(180,180), cex = c(2,2,2), cat.cex = c(1.5,1.5), alpha = c(.75,.75))
 
 ```
